--- a/public/index.html
+++ b/public/index.html
@@ -6,12 +6,12 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../src/styles/main.css">
-  <title>JS Portfolio</title>
+  <title><%= htmlWebpackPlugin.options.title %><</title>
 </head>
 
 <body>
   <div id="main"></div>
-  <script type="module" src="../src//index.js"></script>
+
 </body>
 
 </html>
